fixed align-items types

--- a/components/navigation-button.module.css
+++ b/components/navigation-button.module.css
@@ -4,7 +4,7 @@
   padding: 10px;
   border-radius: 99px;
   display: flex;
-  align-item: center;
+  align-items: center;
   transition: var(--fade);
 
   &:hover {
